--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,12 @@ code {
 input.no-spinner[type="number"]::-webkit-inner-spin-button,
 input.no-spinner[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
+  height: 0;
+  width: 0;
+  opacity: 0;
+  pointer-events: none;
 }
 input.no-spinner[type="number"] {
   -moz-appearance: textfield;
